--- a/public/css/loader.css
+++ b/public/css/loader.css
@@ -1,27 +1,32 @@
+/* CHANGE ALL COLORS */
+:root {
+    --color: RGB(54, 181, 75);
+    --color-background: RGB(216, 253, 216);
+}
 /*LEAF ICON*/
 .leaf-icon {
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
     margin-right: -20px;
     margin-left: 30px;
     font-size: 30px !important;
 }
 /*TR BACKGROUND*/
 .tr-background>tbody>tr:hover {
-    background-color: RGB(216, 253, 216) !important; 
+    background-color: var(--color-background) !important; 
 }
 /*INPUTS BACKGROUND*/
 .input-background:focus {
     box-shadow: none !important;
     outline: none !important;
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
 }
 .input-background:active {
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
 }
 .input-background:hover {
     box-shadow: none;
-    background-color: RGB(216, 253, 216) !important; 
-    border-color: RGB(54, 181, 75) !important; 
+    background-color: var(--color-background) !important; 
+    border-color: var(--color) !important; 
      outline: none !important;
 }
 
@@ -39,14 +44,14 @@ CHECKBOX
 
 /*NAVBAR*/
 .navbar-title, .navbar-subtitles:hover, .navbar-subtitles>li>a:hover, .navbar-subtitles b:hover {
-    background: linear-gradient(TO RIGHT, RGB(54, 181, 75), RGB(244, 255, 248))!important;
+    background: linear-gradient(TO RIGHT, var(--color), RGB(244, 255, 248))!important;
    -webkit-background-clip: text !important;
 	-webkit-text-fill-color: transparent !important;
     transition: 0.5s;
 }
 
 .navbar-vertical>li>a:hover, .navbar-vertical>li>i:hover{
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
 }
 
 /*LINKS COLOR*/
@@ -56,17 +61,17 @@ CHECKBOX
 }
 .links-color a:hover{
     text-decoration: none !important;
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
 }
 /*BORDERS MODAL */
 .modal-content-border {
-    border: 1px solid RGB(54, 181, 75) !important;
+    border: 1px solid var(--color) !important;
 }
 .modal-header-border {
-    border-bottom: 1px solid RGB(216, 253, 216) !important;
+    border-bottom: 1px solid var(--color-background) !important;
 }
 .modal-footer-border {
-    border-top: 1px solid RGB(216, 253, 216) !important;
+    border-top: 1px solid var(--color-background) !important;
 }
 /*DELETE BUTTON MODAL*/
 .modal_delete_link {
@@ -78,14 +83,14 @@ CHECKBOX
 /*CLOSE BUTTON*/
 .close-x-button {
     opacity: 1 !important;
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
     transition: 0.3s !important;
 }
 .close-x-button:hover {
     opacity: 1 !important;
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
     transform: scale(1.2) !important;
-    text-shadow: 0 0 3px RGB(54, 181, 75) !important;
+    text-shadow: 0 0 3px var(--color) !important;
 }
 /*CANCEL BUTTONS*/
 .cancel-button {
@@ -96,19 +101,19 @@ CHECKBOX
 .cancel-button:hover {
     color: black !important;
     transform: scale(1.06) !important;
-    border-color: RGB(54, 181, 75) !important; 
-    background-color: RGB(216, 253, 216) !important; 
+    border-color: var(--color) !important; 
+    background-color: var(--color-background) !important; 
 }
 .cancel-button:focus {
     box-shadow: none !important;
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
 }
 .cancel-button:active {
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
 }
 /*SUBMIT BUTTONS*/
 .submit-buttons {
-    background-color: RGB(54, 181, 75) !important;
+    background-color: var(--color) !important;
     opacity: 0.6 !important;
     transition: 0.5s;
     border-color: none !immportant;
@@ -120,10 +125,10 @@ CHECKBOX
 
 .submit-buttons:focus {
     box-shadow: none !important;
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
 }
 .submit-buttons:active {
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
 }
 
 /*LOADER-GIF*/
