--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,11 @@
-
+/* CHANGE ALL COLORS */
+:root {
+    --color: RGB(54, 181, 75);
+    --color-background: RGB(216, 253, 216);
+}
 /*NAVBAR*/
 .navbar-title, .navbar-subtitles:hover {
-    background: linear-gradient(TO RIGHT, RGB(54, 181, 75), RGB(244, 255, 248))!important;
+    background: linear-gradient(TO RIGHT, var(--color), RGB(244, 255, 248))!important;
    -webkit-background-clip: text !important;
 	-webkit-text-fill-color: transparent !important;
     transition: 0.5s;
@@ -16,21 +20,21 @@
     text-decoration: none !important;
 }
 .post-title:hover {
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
     text-decoration: none !important;
 }
 
 .post-title-selected {
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
 }
 
 /*ICONS*/
 .leaf-icon {
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
     font-size: 30px !important;
 }
 .time-icon, .email-icon, .user-icon, .wallet-icon, .check-icon, .like-icon {
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
 }
 .like-icon {
     font-size: 20px !important;
@@ -41,15 +45,15 @@
 .input-background:focus {
     box-shadow: none !important;
     outline: none !important;
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
 }
 .input-background:active {
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
 }
 .input-background:hover {
     box-shadow: none;
-    background-color: RGB(216, 253, 216) !important; 
-    border-color: RGB(54, 181, 75) !important; 
+    background-color: var(--color-background) !important; 
+    border-color: var(--color) !important; 
      outline: none !important;
 }
 /*PAGINATION*/
@@ -62,12 +66,12 @@
 .pager li .inactive_link:hover {
     color: black !important;
     transform: scale(1.06);
-    border-color: RGB(54, 181, 75) !important; 
-    background-color: RGB(216, 253, 216) !important; 
+    border-color: var(--color) !important; 
+    background-color: var(--color-background)  !important; 
 }
 
 .pager li .active_link {
-    background-color: RGB(54, 181, 75) !important;
+    background-color: var(--color) !important;
     color: black !important;
     transition: 0.4s;
     opacity: 0.6 !important;
@@ -75,39 +79,39 @@
 
 .pager li .active_link:hover {
     transform: scale(1.06);
-    background-color: RGB(54, 181, 75) !important;
-    border-color: RGB(54, 181, 75) !important; 
+    background-color: var(--color) !important;
+    border-color: var(--color) !important; 
     opacity: 1 !important;
 }
 
 /*SEARCH BUTTON*/
 
 .search-button {
-    background-color: RGB(54, 181, 75) !important;
+    background-color: var(--color) !important;
     color: black !important;
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
     transition: 0.4s;
     opacity: 0.6 !important;
 }
 
 .search-button:hover {
-    background-color: RGB(54, 181, 75) !important;
-    border-color: RGB(54, 181, 75) !important; 
+    background-color: var(--color) !important;
+    border-color: var(--color) !important; 
     opacity: 1 !important;
 }
 
 /*LOGIN BUTTON*/
 .login-button {
-    background-color: RGB(54, 181, 75) !important;
+    background-color: var(--color) !important;
     color: black !important;
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
     transition: 0.4s;
     opacity: 0.6 !important;
 }
 
 .login-button:hover {
-    background-color: RGB(54, 181, 75) !important;
-    border-color: RGB(54, 181, 75) !important; 
+    background-color: var(--color) !important;
+    border-color: var(--color) !important; 
     opacity: 1 !important;
 }
 /* FORGOT LINK */
@@ -123,7 +127,7 @@
 
 .forgot-link a:hover{
     text-decoration: none !important;
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
 }
 /*BLOG CATEGORIES*/
 
@@ -134,13 +138,13 @@
 
 .categories-list:hover {
     text-decoration: none !important;
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
 }
 
 /*REGISTER BUTTOM*/
 
 .register-button {
-    background-color: RGB(54, 181, 75) !important;
+    background-color: var(--color) !important;
     margin: 10px 20px 0 20px !important;
     width: 100px !important;
     margin-left: 220px !important;
@@ -155,28 +159,28 @@
 /*COMMENT BUTTON*/ 
 .comment-button {
     color: black;
-    background-color: RGB(54, 181, 75) !important;
+    background-color: var(--color) !important;
     opacity: 0.6 !important;
     transition: 0.5s;    
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
 }
 
 .comment-button:hover {
     color: black;
     opacity: 1 !important;
     transform: scale(1.2);
-    border-color: RGB(54, 181, 75) !important; 
+    border-color: var(--color) !important; 
 }
     
 /*SIDEBAR - WIDGET - SEARCH ENGINE*/
 .well {
     transition: 0.5s;
-    border: 0.5px solid RGB(54, 181, 75) !important; 
+    border: 0.5px solid var(--color) !important; 
 }
 
 .well:hover {
     transform: scale(1.04);
-    box-shadow: 3px 3px 3px 3px RGB(54, 181, 75);
+    box-shadow: 3px 3px 3px 3px var(--color);
 }
 
 /* SIDEBAR */
@@ -187,20 +191,20 @@
 /*READ BUTTOM*/
 .read-more {
     transition: 0.5s;
-    background-color: RGB(54, 181, 75) !important;
-    border-color: RGB(54, 181, 75) !important; 
+    background-color: var(--color) !important;
+    border-color: var(--color) !important; 
 }
 
 .read-more:hover {
     transform: scale(1.06);
-    background-color: RGB(54, 181, 75) !important;
-    border-color: RGB(54, 181, 75) !important; 
+    background-color: var(--color) !important;
+    border-color: var(--color) !important; 
 }
 
 /*LINKEDIN*/
 .linkedin-link {
     text-decoration: none !important;
-    color: RGB(54, 181, 75) !important;
+    color: var(--color) !important;
     transition: 0.5s !important; /*NOT WORKING*/
 }
 
@@ -209,18 +213,18 @@
 }
 
 .linkedin-text {
-    text-shadow: 0 0 3px RGB(54, 181, 75) ;
+    text-shadow: 0 0 3px var(--color) ;
 }
 
 /* FORGOT | RESET | LOGIN */
 
 .forgot-card, .reset-card, .login-card {
-    border: 0.5px solid RGB(54, 181, 75) !important; 
+    border: 0.5px solid var(--color) !important; 
     border-radius: 2px;
 }
 
 .forgot-button, .reset-button, .login-button:hover {
-    background-color: RGB(54, 181, 75) !important;
+    background-color: var(--color) !important;
     opacity: 0.6 !important;
     transition: 0.5s;
     border-color: none !important;
