--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,7 +1,49 @@
-/* CHANGE ALL COLORS */
-:root {
-    --color: RGB(54, 181, 75);
-    --color-background: RGB(216, 253, 216);
+
+.page-header {
+    border-bottom: 1px solid RGB(54, 181, 75) !important;
+    box-shadow: 0px 3px 0px  RGB(54, 181, 75) !important;
+}
+/* TABLE COLUMN SIZES */
+td {
+    border: 0px !important; 
+}    
+th {
+    border-right: 0px !important; 
+    border-left:  0px !important;
+}
+.table-column-size-th {
+    width: 140px !important;
+}
+.table-column-size-change-role {
+    width: 80% !important;
+    margin-left: 15% !important;
+}
+.table-column-size-check-all {
+    width: 6.5% !important;
+}
+.table-column-size-id {
+    width: 2% !important;
+}
+.table-column-size-categories {
+    width: 30% !important;
+}
+.table-column-size-email {
+    width: 20% !important;
+}
+.table-column-size-role {
+    width: 4% !important;
+}
+.table-column-size-button-th {
+    width: 5% !important;
+}
+.table-column-size-button-td {
+    width: 100% !important;
+}
+
+/* IMAGE SIZE */
+.img-fluid {
+    width: 120px;
+    height: auto
 }
 /*LEAF ICON*/
 .leaf-icon {
@@ -14,21 +56,6 @@
 /*TR BACKGROUND*/
 .tr-background>tbody>tr:hover {
     background-color: var(--color-background) !important; 
-}
-/*INPUTS BACKGROUND*/
-.input-background:focus {
-    box-shadow: none !important;
-    outline: none !important;
-    border-color: var(--color) !important; 
-}
-.input-background:active {
-    border-color: var(--color) !important; 
-}
-.input-background:hover {
-    box-shadow: none;
-    background-color: var(--color-background) !important; 
-    border-color: var(--color) !important; 
-     outline: none !important;
 }
 
 /*
@@ -55,15 +82,6 @@ CHECKBOX
     color: var(--color) !important;
 }
 
-/*LINKS COLOR*/
-.links-color a{
-    text-decoration: none !important;
-    color: RGB(158, 225, 161) !important;
-}
-.links-color a:hover{
-    text-decoration: none !important;
-    color: var(--color) !important;
-}
 /*BORDERS MODAL */
 .modal-content-border {
     border: 1px solid var(--color) !important;
@@ -74,14 +92,14 @@ CHECKBOX
 .modal-footer-border {
     border-top: 1px solid var(--color-background) !important;
 }
-/*DELETE BUTTON MODAL*/
+/*DELETE BUTTON MODAL TODO*/
 .modal_delete_link {
     transition: 0.4s !important;
 }
 .modal_delete_link:hover {
     transform: scale(1.06) !important;
 }
-/*CLOSE BUTTON*/
+/*CLOSE BUTTON TODO*/
 .close-x-button {
     opacity: 1 !important;
     color: var(--color) !important;
@@ -98,7 +116,6 @@ CHECKBOX
     color: black !important;
     transition: 0.4s !important;
 }
-
 .cancel-button:hover {
     color: black !important;
     transform: scale(1.06) !important;
@@ -112,43 +129,25 @@ CHECKBOX
 .cancel-button:active {
     border-color: var(--color) !important; 
 }
-/*SUBMIT BUTTONS*/
-.submit-buttons {
-    background-color: var(--color) !important;
-    opacity: 0.6 !important;
-    transition: 0.5s;
-    border-color: none !immportant;
-}
 
-.submit-buttons:hover {
-    opacity: 1 !important;
-}
-
-.submit-buttons:focus {
-    box-shadow: none !important;
-    border-color: var(--color) !important; 
-}
-.submit-buttons:active {
-    border-color: var(--color) !important; 
-}
-
-/*LOADER-GIF*/
+/*LOADER-GIF TODO*/
 #load-screen {
-background: url(../../images/header-back.png);
-position: fixed;
-z-index: 10000;
-top:0px;
-width: 100%;
-height: 1600px;
+    background: url(../../images/header-back.png);
+    position: fixed;
+    z-index: 10000;
+    top:0px;
+    width: 100%;
+    height: 1600px;
 }
-
 
 #loading {
-width: 450px;
-height: 450px;
-margin: 10% auto;
-background: url(../../images/leafloader.gif);
-background-size: 80%;
-background-repeat: no-repeat;
-background-position: center;
+    width: 450px;
+    height: 450px;
+    margin: 10% auto;
+    background: url(../../images/leafloader.gif);
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+
