--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,8 +1,4 @@
-/* CHANGE ALL COLORS */
-:root {
-    --color: RGB(54, 181, 75);
-    --color-background: RGB(216, 253, 216);
-}
+
 /*NAVBAR*/
 .navbar-title, .navbar-subtitles:hover {
     background: linear-gradient(TO RIGHT, var(--color), RGB(244, 255, 248))!important;
@@ -14,6 +10,12 @@
 .navbar-subtitles:hover {
     transform: scale(1.2);
 }
+
+.hr-post {
+    border-bottom: 1px solid RGB(54, 181, 75) !important;
+}
+
+
 /*TITLE*/
 .post-title {
     color: black !important;
@@ -42,23 +44,7 @@
     text-decoration: none !important;
 }
 
-/*INPUTS BACKGROUND*/
-.input-background:focus {
-    box-shadow: none !important;
-    outline: none !important;
-    border-color: var(--color) !important; 
-}
-.input-background:active {
-    border-color: var(--color) !important; 
-}
-.input-background:hover {
-    box-shadow: none;
-    background-color: var(--color-background) !important; 
-    border-color: var(--color) !important; 
-     outline: none !important;
-}
 /*PAGINATION*/
-
 .pager li .inactive_link {
     color: black !important;
     transition: 0.4s;
@@ -86,7 +72,6 @@
 }
 
 /*SEARCH BUTTON*/
-
 .search-button {
     background-color: var(--color) !important;
     color: black !important;
@@ -101,37 +86,7 @@
     opacity: 1 !important;
 }
 
-/*LOGIN BUTTON*/
-.login-button {
-    background-color: var(--color) !important;
-    color: black !important;
-    border-color: var(--color) !important; 
-    transition: 0.4s;
-    opacity: 0.6 !important;
-}
-
-.login-button:hover {
-    background-color: var(--color) !important;
-    border-color: var(--color) !important; 
-    opacity: 1 !important;
-}
-/* FORGOT LINK */
-.forgot-link{
-    margin-top: 10px !important;
-    margin-bottom: 0 !important;
-}
-
-.forgot-link a{
-    text-decoration: none !important;
-    color: RGB(158, 225, 161) !important;
-}
-
-.forgot-link a:hover{
-    text-decoration: none !important;
-    color: var(--color) !important;
-}
 /*BLOG CATEGORIES*/
-
 .categories-list {
     text-decoration: none !important;
     color: black !important;
@@ -143,16 +98,14 @@
 }
 
 /*REGISTER BUTTOM*/
-
 .register-button {
     background-color: var(--color) !important;
     margin: 10px 20px 0 20px !important;
     width: 100px !important;
-    margin-left: 220px !important;
+    margin-left: 85% !important;
     opacity: 0.6 !important;
     transition: 0.5s;
 }
-
 .register-button:hover {
     opacity: 1 !important;
     transform: scale(1.2);
@@ -177,6 +130,11 @@
 .well {
     transition: 0.5s;
     border: 0.5px solid var(--color) !important; 
+}
+
+.well p {
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .well:hover {
@@ -234,7 +192,23 @@
 .forgot-button:hover, .reset-button:hover, .login-button:hover  {
     opacity: 1 !important;
     transform: scale(1.1);
+}   
+
+/* LOGOUT BUTTON */
+.logout-button-index {
+    margin-top: 2% !important;
+    margin-left: 30% !important;
+    padding-bottom: -50px !important;
 }
+
+/* ICON'S */
+.fa-user {
+    color: var(--color) !important;
+}
+
+
+
+
 
 
 
