Fixed Bugs, added: modal, media querys, policy.

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -204,6 +204,19 @@
     color: var(--color) !important;
 }
 
+/* BORDER IMAGE */
+.border-image {
+    border-radius: 5px !important;
+}
+
+.ck:hover {
+    color: var(--color) !important;
+}
+
+.ck-button:hover, .ck-content:hover {
+    background-color: var(--color-background) !important; 
+}
+
 /* -----------------MEDIA QUERIES----------------------- */
 @media screen and (max-width: 450px) {
     .hide-on-mobile {
