--- a/public/css/home.css
+++ b/public/css/home.css
@@ -12,7 +12,7 @@
 }
 
 .hr-post {
-    border-bottom: 1px solid RGB(54, 181, 75) !important;
+    border-top: 1px solid RGB(54, 181, 75) !important;
 }
 
 
