Adding Policies, fixing bugs.

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -206,8 +206,14 @@
 .fa-user {
     color: var(--color) !important;
 }
-/* PROFILE IMAGE FOR COMMENTS */
+/* PROFILE IMAGE FOR POST AND COMMENTS */
 .img-profile-comment {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+
+.img-profile-post{
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -239,15 +245,31 @@
         font-size: 2rem !important;
     }
 }
-/* -----------------MEDIA QUERIES FOR IPHONE 6S----------------------- */
-@media screen and (max-width: 450px) {
+/* -----------------MEDIA QUERIES FOR IPHONE 6S----------------------- GOOGLE DEV TOOLS = 375 X 550*/
+@media screen and (max-width: 375px) {
     .position-for-iphone-6s {
         position: fixed;
-        left: 70%;
-        bottom: 82%;
+        left: 25rem;
+        bottom: 44.5rem;
     }
     .margin-left-for-facebook-login-iphone-6s {
         margin-left: 13.3rem;
+    }
+    .menu-display-flex-row-iphone-6s {
+        display: flex;
+        flex-flow: row;
+    }
+    .menu-display-flex-column-iphone-6s {
+        display: flex;
+        flex-flow: column !important;
+    }
+    .menu-padding-left-right-iphone-6s {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    .menu-margin-left-more-iphone-6s {
+        margin-left: 10rem;
     }
 }
 
