Adding LinkedIn, Google. Fixing register, login

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -217,6 +217,11 @@
     background-color: var(--color-background) !important; 
 }
 
+/* SOCIAL BUTTON */
+.social-width-button {
+    width: 10rem !important;
+}
+
 /* -----------------MEDIA QUERIES----------------------- */
 @media screen and (max-width: 450px) {
     .hide-on-mobile {
