--- a/public/css/common.css
+++ b/public/css/common.css
@@ -228,7 +228,7 @@
         display: none; 
      }
 }
-/* -----------------MEDIA QUERIES FOR IPHONE 6S----------------------- */
+/* -----------------MEDIA QUERIES FOR IPHONE 6S----------------------- GOOGLE DEV TOOLS = 375 X 550*/
 @media screen and (max-width: 450px) {
     .toggle {
         margin-top: 0 !important;
