--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -189,32 +189,24 @@ input[type="checkbox"]:checked + .cbx {
 }
 
 
-/* -----------------MEDIA QUERIES FOR IPHONE 6S----------------------- GOOGLE DEV TOOLS = 375 X 550*/
-@media screen and (max-width: 375px) and (max-height: 550px) {
+/* -----------------MEDIA QUERIES FOR IPHONE 6S - X ----------------------- GOOGLE DEV TOOLS = 375 X 550 || X = 375 X 812 */
+@media screen and (min-width: 375px) and (max-width: 378px) {
     .position-for-iphone-admin {
         position: fixed;
         left: 24rem;
-        bottom: 40rem;
+        top: 11rem;
     }
 }
 
 /* -----------------MEDIA QUERIES FOR IPHONE 6 plus----------------------- GOOGLE DEV TOOLS = 414 X 736*/
-@media  screen and (max-width: 414px) and (max-height: 736px)  {
+@media  screen and (min-width: 414px) and (max-width: 417px)  {
     .position-for-iphone-admin {
         position: fixed;
         left: 28rem;
-        bottom: 58.7rem;
+        top: 11rem;
     }
 }
 
-/* -----------------MEDIA QUERIES FOR IPHONE X----------------------- GOOGLE DEV TOOLS = 375 X 812*/
-@media screen and (max-width: 375px) and (max-height: 812px)    {
-    .position-for-iphone-admin {
-        position: fixed;
-        left: 24rem;
-        bottom: 66.3rem;
-    }
-}
 
 
 
